<resources>
    <string name="app_name">Meridian Peru app</string>
    <string name="txt_book_tickets">Book Tickets</string>
    <string name="txt_book_hotel">Book Hotel</string>
    <string name="txt_london">London</string>
    <string name="txt_header_festival_london">Wireless</string>
    <string name="txt_festival_london">Festival of London</string>
    <string name="txt_villajoyosa">Villajoyosa</string>
    <string name="txt_festival_villajoyosa">Festival of Villajoyosa</string>
    <string name="txt_header_festival_villajoyosa">Морос y Cristianos</string>
    <string name="txt_valencia">Valencia</string>
    <string name="txt_albufera">Albufera</string>
    <string name="txt_festival_albufera">Festival of Albufera</string>
    <string name="txt_header_festival_albufera">Festival of Birds</string>
    <string name="txt_ajim">Ajim</string>
    <string name="txt_festival_ajim">Festival of Ajim</string>
    <string name="txt_header_festival_ajim">Festival of Island Cultures</string>
    <string name="txt_tamanrasset">Tamanrasset</string>
    <string name="txt_festival_tamanrasset">Festival of Tamanrasset</string>
    <string name="txt_header_festival_tamanrasset">Festival of Achilles</string>
    <string name="txt_gonna_re_zhu">Gonna Re Zhu</string>
    <string name="txt_festival_gonna_re_zhu">Festival of Gonna Re Zhu</string>
    <string name="txt_header_festival_gonna_re_zhu">Festival of Elephants</string>
    <string name="txt_mumbai">Mumbai</string>
    <string name="txt_header_festival_mumbai">Kala Ghoda Festival</string>
    <string name="txt_festival_mumbai">Festival of Mumbai</string>
    <string name="txt_botswana">Botswana</string>
    <string name="txt_header_festival_botswana">Okavango Festival</string>
    <string name="txt_festival_botswana">Festival of Botswana</string>
    <string name="txt_antarctica">Antarctica</string>
    <string name="txt_header_festival_antarctica">Festival of Antarctica</string>
    <string name="txt_festival_antarctica">Festival of Antarctica</string>
    <string name="txt_study">Study</string>
    <string name="txt_quiz">Quiz</string>
    <string name="txt_header_royal_observatory">Royal Observatory</string>
    <string name="txt_header_greenwich">Greenwich Mean Time</string>
    <string name="txt_quiz_question_1">Question 1</string>
    <string name="txt_quiz_question_2">Question 2</string>
    <string name="txt_quiz_question_3">Question 3</string>
    <string name="txt_quiz_question_4">Question 4</string>
    <string name="txt_quiz_question_5">Question 5</string>
    <string name="txt_quiz_question_6">Question 6</string>
    <string name="txt_quiz_question_7">Question 7</string>
    <string name="txt_quiz_question_8">Question 8</string>
    <string name="txt_quiz_question_9">Question 9</string>
    <string name="txt_quiz_question_10">Question 10</string>
    <string name="txt_quiz_variant_a">a</string>
    <string name="txt_quiz_variant_b">b</string>
    <string name="txt_quiz_variant_c">c</string>
    <string name="txt_quiz_variant_d">d</string>
    <string name="txt_next_place">Next place</string>
    <string name="txt_previous_place">Previous place</string>
    <string name="txt_right_answer">Right answer!</string>
    <string name="txt_wrong_answer">Wrong answer!</string>
    <string name="txt_no_map_app">No map app found!</string>
    <string name="txt_no_access">No access!</string>
    <string name="txt_complete_all_quiz">Complete all quiz in this area to get an access!</string>
    <string name="txt_planning_to_go">I\'m planning a trip to the festival in</string>
    <string name="txt_go_with_me">Come with me!!!</string>
    <string name="txt_choose_app_to_share">Choose an app to share</string>
    <string name="error_license_txt">Error With connection!</string>
    <string name="privacy_policy_header_txt">Privacy Policy</string>
    <string name="confirm_license_txt">I agree to the processing of personal data as provided for in the privacy policy</string>
    <string name="confirm_license_btn">Continue</string>
    <string name="agree_license_txt">Thank you! You can now use the application!</string>
    <string name="explain_policy_txt">Unfortunately, you cannot use the application without confirming the privacy policy</string>

</resources>