<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_london"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_london"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tv_villajoyosa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_villajoyosa"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_albufera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_albufera"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_ajim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_ajim"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_tamanrasset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_tamanrasset"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_gonna_re_zhu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_gonna_re_zhu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_longa_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_longa_market"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_botswana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_botswana"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_antarctica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_antarctica"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible" />

</LinearLayout>