<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_london"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_london"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_valencia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_valencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_valencia"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_albufera"
        app:layout_constraintEnd_toEndOf="@+id/tv_london"
        app:layout_constraintStart_toStartOf="@+id/tv_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_london" />

    <TextView
        android:id="@+id/tv_albufera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_albufera"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_ajim"
        app:layout_constraintEnd_toEndOf="@+id/tv_valencia"
        app:layout_constraintStart_toStartOf="@+id/tv_valencia"
        app:layout_constraintTop_toBottomOf="@+id/tv_valencia" />

    <TextView
        android:id="@+id/tv_ajim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_ajim"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_tamanrasset"
        app:layout_constraintEnd_toEndOf="@+id/tv_albufera"
        app:layout_constraintStart_toStartOf="@+id/tv_albufera"
        app:layout_constraintTop_toBottomOf="@+id/tv_albufera" />

    <TextView
        android:id="@+id/tv_tamanrasset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_tamanrasset"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_gonna_re_zhu"
        app:layout_constraintEnd_toEndOf="@+id/tv_ajim"
        app:layout_constraintStart_toStartOf="@+id/tv_ajim"
        app:layout_constraintTop_toBottomOf="@+id/tv_ajim" />

    <TextView
        android:id="@+id/tv_gonna_re_zhu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_gonna_re_zhu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_longa_market"
        app:layout_constraintEnd_toEndOf="@+id/tv_tamanrasset"
        app:layout_constraintStart_toStartOf="@+id/tv_tamanrasset"
        app:layout_constraintTop_toBottomOf="@+id/tv_tamanrasset" />

    <TextView
        android:id="@+id/tv_longa_market"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_longa_market"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_botswana"
        app:layout_constraintEnd_toEndOf="@+id/tv_gonna_re_zhu"
        app:layout_constraintStart_toStartOf="@+id/tv_gonna_re_zhu"
        app:layout_constraintTop_toBottomOf="@+id/tv_gonna_re_zhu" />

    <TextView
        android:id="@+id/tv_botswana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_botswana"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/tv_longa_market"
        app:layout_constraintStart_toStartOf="@+id/tv_longa_market"
        app:layout_constraintTop_toBottomOf="@+id/tv_longa_market" />

    <TextView
        android:id="@+id/tv_antarctica"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:layout_weight="1"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_antarctica"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_botswana"
        app:layout_constraintStart_toStartOf="@+id/tv_botswana"
        app:layout_constraintTop_toBottomOf="@+id/tv_botswana" />

</androidx.constraintlayout.widget.ConstraintLayout>