<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_with_festival_london"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_london"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_villajoyosa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_with_festival_villajoyosa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_villajoyosa"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_albufera"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_london" />

    <TextView
        android:id="@+id/tv_with_festival_albufera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_albufera"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_ajim"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_villajoyosa" />

    <TextView
        android:id="@+id/tv_with_festival_ajim"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_ajim"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_tamanrasset"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_albufera" />

    <TextView
        android:id="@+id/tv_with_festival_tamanrasset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_tamanrasset"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_gonna_re_zhu"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_ajim" />

    <TextView
        android:id="@+id/tv_with_festival_gonna_re_zhu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_gonna_re_zhu"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_botswana"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_tamanrasset" />

    <TextView
        android:id="@+id/tv_with_festival_botswana"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_botswana"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_antarctica"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_gonna_re_zhu" />

    <TextView
        android:id="@+id/tv_with_festival_antarctica"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_antarctica"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/tv_with_festival_longa_market"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_botswana" />

    <TextView
        android:id="@+id/tv_with_festival_longa_market"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/anim_click_text"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/abril_fatface"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/txt_festival_longa_market"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_with_festival_london"
        app:layout_constraintStart_toStartOf="@+id/tv_with_festival_london"
        app:layout_constraintTop_toBottomOf="@+id/tv_with_festival_botswana" />

</androidx.constraintlayout.widget.ConstraintLayout>